[gd_scene load_steps=2 format=3 uid="uid://quickslot_ui_scene"]

[ext_resource type="Script" path="res://scripts/ui/quickslot_ui.gd" id="1_quickslot_ui"]

[node name="QuickslotUI" type="CanvasLayer"]
script = ExtResource("1_quickslot_ui")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -100.0
offset_right = 120.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Slot0" type="Panel" parent="Container/HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="Background" type="ColorRect" parent="Container/HBoxContainer/Slot0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="Highlight" type="ColorRect" parent="Container/HBoxContainer/Slot0"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.8, 0, 0.5)

[node name="Icon" type="TextureRect" parent="Container/HBoxContainer/Slot0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Quantity" type="Label" parent="Container/HBoxContainer/Slot0"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlotNumber" type="Label" parent="Container/HBoxContainer/Slot0"]
layout_mode = 1
anchors_preset = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 15.0
offset_bottom = 15.0
text = "1"

[node name="Slot1" type="Panel" parent="Container/HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="Background" type="ColorRect" parent="Container/HBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="Highlight" type="ColorRect" parent="Container/HBoxContainer/Slot1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.8, 0, 0.5)

[node name="Icon" type="TextureRect" parent="Container/HBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Quantity" type="Label" parent="Container/HBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlotNumber" type="Label" parent="Container/HBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 15.0
offset_bottom = 15.0
text = "2"

[node name="Slot2" type="Panel" parent="Container/HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="Background" type="ColorRect" parent="Container/HBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="Highlight" type="ColorRect" parent="Container/HBoxContainer/Slot2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.8, 0, 0.5)

[node name="Icon" type="TextureRect" parent="Container/HBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Quantity" type="Label" parent="Container/HBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlotNumber" type="Label" parent="Container/HBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 15.0
offset_bottom = 15.0
text = "3"
